tests/baselines/reference/parserConstructorAmbiguity3.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts(1,1): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts(1,10): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts(1,12): error TS1005: '(' expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts (3 errors) ====
    new Date<A>
    ~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
             ~
!!! error TS2304: Cannot find name 'A'.
               
!!! error TS1005: '(' expected.